Update application email

--- a/anggota/index.html
+++ b/anggota/index.html
@@ -35,7 +35,7 @@
     </ul>
   </li>
   <li>Cantumkan nama lengkap pada bukti transfer sesuai yang didaftarkan pada google form</li>
-  <li>Mengirimkan bukti transfer dan fotokopi KTP ke membership@ruby.id</li>
+  <li>Mengirimkan bukti transfer dan fotokopi KTP ke apply@perkodi.org</li>
   <li>Iuran anggota baru yang dimaksud adalah sejumlah 220.000, kemudian akan ada sumbangan per tahun sejumlah 120.000 / tahun</li>
   <li>Iuran anggota baru sudah termasuk sumbangan per tahun, tahun pertama</li>
   <li>Anggota baru akan mendapatkan kaos id-ruby (estimasi pengiriman 3 bulan dari terbentuknya badan hukum)</li>
